<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:id="@+id/bottom_sheet"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="#386F65"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bottom_sheet_direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direction"
                android:textStyle="bold"
                android:textSize="25sp"
                android:paddingTop="4dp"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/bottom_sheet_time_dist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_distance"
                android:textSize="18sp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/bottom_sheet_arrivaltime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrival_time"
                android:textSize="18sp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/bottom_sheet_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:textSize="18sp"
                android:paddingTop="4dp"
                android:paddingBottom="28dp"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/bottom_sheet_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:backgroundTint="#739986"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:padding="18dp" />
    </LinearLayout>

</FrameLayout>
